[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/core/CardViewer/CVGridCardObject.gd" type="Script" id=1]
[ext_resource path="res://src/core/CardViewer/CVPreviewPopup.tscn" type="PackedScene" id=2]

[node name="GridCardObject" type="CenterContainer"]
offset_right = 150.0
offset_bottom = 240.0
custom_minimum_size = Vector2( 150, 240 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviewPopup" parent="." instance=ExtResource( 2 )]
offset_left = 75.0
offset_top = 120.0
offset_right = 75.0
offset_bottom = 120.0

[connection signal="mouse_entered" from="." to="." method="_on_GridCardObject_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_GridCardObject_mouse_exited"]
